# flwr_attacks

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release-to-pypi.yml
docs/: pga-attack-implementation.md
examples/minmax-pytorch/: README.md  requirements.txt  sim.ipynb  sim.py  utils.py
flwr_attacks/: __init__.py  aggregation_tailored.py  algorithms.py  attack.py  computations.py  lie.py  minmax.py  minsum.py  model_poisoning.py  optimizers.py  pga.py  server.py  simple_agrs.py  utils.py
flwr_attacks/helpers/: debug_matrix.py
